syntax = "proto3";

package pb;

import "account.proto";
import "entry.proto";

option go_package = "github.com/AradTenenbaum/BackendCourse/pb";

message WithdrawRequest {
    int64 account_id = 1;
    int64 amount = 2;
}

message WithdrawResponse {
    Entry new_entry = 1;
    Account account = 2;
}